# husky

./: README.md  frames.gv
husky/: description.launch  gimbal.urdf.xacro
husky/husky_control/config/: control.yaml
husky/husky_control/launch/: control.launch
husky/husky_description/urdf/: husky.urdf.xacro
husky/husky_gazebo/launch/: husky_empty_world.launch  husky_playpen.launch  spawn_husky.launch
husky/husky_viz/launch/: view_model.launch
husky_control/config/: control.yaml
husky_control/launch/: control.launch  teleop.launch
husky_description/urdf/: decorations.urdf.xacro  husky.urdf.xacro
husky_gazebo/: package.xml
husky_gazebo/bag/: goal.bag  new_goal.bag
husky_gazebo/launch/: husky_empty_world.launch  husky_playpen.launch  husky_simulation.launch  multi_husky_playpen.launch  playpen.launch  spawn_husky.launch
husky_gazebo/worlds/: clearpath_playpen.world  clearpath_playpen_new.world
husky_navigation/: package.xml
husky_navigation/config/: costmap_common.yaml  planner.yaml
husky_navigation/launch/: amcl_demo.launch  move_base.launch
husky_sensor_angle/: CMakeLists.txt  package.xml
husky_sensor_angle/config/: config.yaml  default.yaml
husky_sensor_angle/include/husky_sensor_angle/: Algorithm.hpp  AngleCalculator.hpp
husky_sensor_angle/launch/: angle_control.launch  ros_package_template.launch
husky_sensor_angle/src/: Algorithm.cpp  AngleCalculator.cpp  husky_sensor_angle_node.cpp
husky_simulator/launch/: husky_simulation.launch
husky_viz/launch/: view_robot.launch
husky_viz/rviz/: robot.rviz  robot_mapless.rviz
(+4 files in other folders)
